<!-- fragment_login.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/_16dp"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/in"
        android:textSize="@dimen/_24sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginBottom="@dimen/_16dp" />

    <EditText
        android:id="@+id/loginEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:hint="@string/login_text"
        android:layout_marginBottom="@dimen/_16dp" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_text"
        android:textColor="@color/black"
        android:inputType="textPassword"
        android:layout_marginBottom="@dimen/_16dp" />

    <Button
        android:id="@+id/loginButton"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginBTN_text" />
</LinearLayout>
